# gvpy

./: .gitignore  .gitmodules  .travis.yml  HISTORY.md  HISTORY.rst  LICENSE.md  Makefile  README.md  README.rst  environment.yml  gvcolormaps.py  gvfigure.py  gvimport.py  gvmisc.py  gvocean.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml
docs/: .gitignore  Makefile  api.rst  cm.html  colormaps.ipynb  conf.py  examples.rst  index.html  index.rst  io.html  misc.html  ocean.html  plot.html  signal.html  todo.rst
docs/_build/doctrees/: api.doctree  colormaps.doctree  environment.pickle  examples.doctree  history.doctree  index.doctree  installation.doctree  todo.doctree
docs/_build/doctrees/nbsphinx/: colormaps.ipynb
docs/_build/html/: .buildinfo  api.html  colormaps.html  examples.html  genindex.html  history.html  index.html  installation.html  objects.inv  search.html  searchindex.js  sitemap.xml  todo.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/gvpy/: io.html  misc.html  ocean.html  plot.html  signal.html
docs/_build/html/_sources/: api.rst.txt  installation.rst.txt
docs/_build/html/_static/: pygments.css
gvpy/: __init__.py  adcp.py  cm.py  colormaps.py  figure.py  gm81.py  gvimport.py  io.py  maps.py  misc.py  mod.py  mp.py  ocean.py  plot.py  signal.py  time.py  trilaterate.py  xr.py
gvpy/tests/: test_time.py  test_triangulation.py
notebooks/adcp/: read_raw_rdi.ipynb
