[build-system]
requires = ["setuptools", ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gvpy"]

[project]
name = "gvpy"
version = "0.2.0"
authors = [
    {name = "Gunnar Voet", email = "gvoet@ucsd.edu"},
    ]
description = "Library of python modules for data analysis and visualization"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["physical oceanography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Oceanography",
    ]
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "gsw",
    "scipy",
    "xarray",
    "matplotlib",
    "seabird",
    "munch",
    "pandas",
    "IPython",
    "requests",
    "mixsea",
    "lat-lon-parser",
    "cartopy",
    "loguru",
    ]

[project.urls]
# Homepage = "https://example.com"
Documentation = "https://gunnarvoet.github.io/gvpy/gvpy.html"
Repository = "https://github.com/gunnarvoet/gvpy.git"
Issues = "https://github.com/gunnarvoet/gvpy/issues"
# Changelog = "https://github.com/gunnarvoet/gvpy/blob/main/HISTORY.md"

[tool.pytest.ini_options]
# in general, do not place a `__init__.py` in your tests
# options are explained here:
# https://learn.scientific-python.org/development/guides/pytest/
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
    "tests",
    ]
